# Test_OTA

./: .gitignore  README.md  main.py
projects/: tracking.py
projects/pi_app/: .env  Dockerfile  Readme.md  Readme.vi.md  docker-compose.yml
projects/pi_app/backend/: config.py  database.py  models.py  requirements.txt
projects/pi_app/backend/products/: routes.py
projects/pi_app/qt_client/: .env.example  api_client.py  home_screen.py  main.py  pyproject.toml  qr_payment_dialog.py  requirements.txt  run.sh  run_macos.sh  run_tmp.sh  stylesheet.py
projects/pi_app/qt_client/config/: settings.py  stylesheet.py
projects/pi_app/qt_client/screens/: auth_screen.py  camera_scan_screen.py  cart_screen.py  home_screen.py  map_screen.py  qr_payment_dialog.py
projects/pi_app/qt_client/tests/: conftest.py  test_auth_screen.py  test_cart_screen.py  test_home_screen.py  test_product_widget.py  test_qr_payment_dialog.py
projects/pi_app/qt_client/utils/: api_client.py  camera_barcode.py  serial_controller.py  serial_reader.py
projects/pi_app/qt_client/widgets/: product_widget.py
projects/scale_firmware/: bt_soc_nova_freertos_green.s37  bt_soc_nova_freertos_red.s37
